// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommonModal component renders correctly 1`] = `
<View>
  <View>
    <View
      style={
        Object {
          "backgroundColor": "blue",
          "height": 100,
        }
      }
    />
  </View>
</View>
`;

exports[`CommonModal component renders correctly style with appModalStyle 1`] = `
<Modal
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={true}
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(12, 13, 14, 0.5)",
        "flex": 1,
        "height": 200,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
    testID="common_modal.center"
  >
    <View
      style={
        Object {
          "backgroundColor": "blue",
          "height": 100,
        }
      }
    />
  </View>
</Modal>
`;

exports[`CommonModal component renders correctly with useAppBottomSheet = false 1`] = `
<Modal
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={true}
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(12, 13, 14, 0.5)",
        "flex": 1,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
    testID="common_modal.center"
  >
    <View
      style={
        Object {
          "backgroundColor": "blue",
          "height": 100,
        }
      }
    />
  </View>
</Modal>
`;
